WebCore/html/HTML5Tokenizer.cpp
@@ -54,6 +54,7 @@ HTML5Tokenizer::~HTML5Tokenizer()
 
 void HTML5Tokenizer::begin()
 {
+    // FIXME: Should we reset the lexer?
 }
 
 void HTML5Tokenizer::pumpLexer()
@@ -68,7 +69,9 @@ void HTML5Tokenizer::pumpLexer()
 
         // The parser will pause itself when waiting on a script to load or run.
         // ScriptRunner executes scripts at the right times and handles reentrancy.
-        bool shouldContinueParsing = m_scriptRunner->execute(m_treeBuilder->takeScriptToProcess());
+        int scriptStartLine = 0;
+        RefPtr<Element> scriptElement = m_treeBuilder->takeScriptToProcess(scriptStartLine);
+        bool shouldContinueParsing = m_scriptRunner->execute(scriptElement.release(), scriptStartLine);
         m_treeBuilder->setPaused(!shouldContinueParsing);
         if (!shouldContinueParsing)
             return;
@@ -108,6 +111,16 @@ void HTML5Tokenizer::finish()
 int HTML5Tokenizer::executingScript() const
 {
     return m_scriptRunner->inScriptExecution();
+}
+
+int HTML5Tokenizer::lineNumber() const
+{
+    return m_lexer->lineNumber();
+}
+
+int HTML5Tokenizer::columnNumber() const
+{
+    return m_lexer->columnNumber();
 }
 
 bool HTML5Tokenizer::isWaitingForScripts() const
