WebCore/html/HTML5TreeBuilder.h
@@ -53,7 +53,7 @@ public:
     // The token really should be passed as a const& since it's never modified.
     PassRefPtr<Node> constructTreeFromToken(HTML5Token&);
     // Must be called when parser is paused before calling the parser again.
-    PassRefPtr<Element> takeScriptToProcess();
+    PassRefPtr<Element> takeScriptToProcess(int& scriptStartLine);
 
     // Done, close any open tags, etc.
     void finished();
@@ -63,7 +63,7 @@ private:
     PassRefPtr<Node> processToken(HTML5Token&, UChar currentCharacter = 0);
     
     void handleScriptStartTag();
-    void handleScriptEndTag(Element*);
+    void handleScriptEndTag(Element*, int scriptStartLine);
 
     Document* m_document; // This is only used by the m_legacyParser for now.
     bool m_reportErrors;
@@ -74,8 +74,14 @@ private:
 
     // We're re-using logic from the old HTMLParser while this class is being written.
     OwnPtr<HTMLParser> m_legacyHTMLParser;
-    RefPtr<Element> m_lastScriptElement; // FIXME: This is a hack for <script> support.
-    RefPtr<Element> m_scriptToProcess; // Set to a <script> tag which needs processing.
+
+    // These members are intentionally duplicated as the first set is a hack
+    // on top of the legacy parser which will eventually be removed.
+    RefPtr<Element> m_lastScriptElement; // FIXME: Hack for <script> support on top of the old parser.
+    int m_lastScriptElementStartLine; // FIXME: Hack for <script> support on top of the old parser.
+
+    RefPtr<Element> m_scriptToProcess; // <script> tag which needs processing before resuming the parser.
+    int m_scriptToProcessStartLine; // Starting line number of the script tag needing processing.
 };
 
 }
